--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y continuidad en el desarrollo de software </li>
+         <li> Kubernetes </li>
      </ul>
 </body>
 </html>
