corrigiendo curso vagrant

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: Gerenciando máquinas Virtuales </li>
          <li> Docker: Creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y continuidad en el desarrollo de software </li>
