--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li> Docker: Creando containers sin dolor de cabeza </li>
         <li> Ansible </li>
         <li> Integración continua: Madurez y continuidad en el desarrollo de software </li>
+        <li> Kubernetes: integración a la orquestación de containers</li>
     </ul>
 </body>
 </html>
