modificando el curso de ansible

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li> Vagrant: Gerenciando máquinas Virtuales </li>
         <li> Docker: Creando containers sin dolor de cabeza </li>
-        <li> Ansible </li>
+        <li> Ansible: Su Infraestructura como código </li>
         <li> Integración continua: Madurez y continuidad en el desarrollo de software </li>
         <li> Kubernetes: integración a la orquestación de containers</li>
     </ul>
